Upgrade to Java 21 and Kotlin 2.2.0